--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    services:
+      ganache:
+        image: trufflesuite/ganache-cli
+        ports:
+          - 8545:8545
+        options: --entrypoint "sh -c 'ganache-cli --accounts 10 --defaultBalanceEther 100'"
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
