--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,7 @@ jobs:
         image: trufflesuite/ganache-cli
         ports:
           - 8545:8545
-        options: >-
-          --entrypoint sh
-          -c "ganache-cli --accounts 10 --defaultBalanceEther 100"
+        options: --entrypoint sh -c "ganache-cli --accounts 10 --defaultBalanceEther 100"
 
     steps:
     - name: Checkout code
