--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,37 +1,36 @@
-name: CD
+name: Blockchain CD
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     services:
       ganache:
         image: trufflesuite/ganache-cli
         ports:
           - 8545:8545
-        options: --entrypoint sh -c "ganache-cli --accounts 10 --defaultBalanceEther 100"
+        options: >-
+          --entrypoint=sh
+          -c "ganache-cli --accounts 10 --defaultBalanceEther 100 --deterministic"
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Compile contracts
-      run: ./scripts/compile_contracts.sh
+      run: bash scripts/compile_contracts.sh
 
     - name: Deploy contracts
       run: python migrations/deploy_contracts.py
