--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Blockchain CI/CD
 
 on:
   push:
@@ -9,33 +9,37 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-
     services:
       ganache:
         image: trufflesuite/ganache-cli
         ports:
           - 8545:8545
-        options: --entrypoint sh -c "ganache-cli --accounts 10 --defaultBalanceEther 100"
+        options: >-
+          --entrypoint "ganache-cli"
+          --accounts 10
+          --defaultBalanceEther 100
+          --deterministic
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: 3.8
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Compile contracts
-      run: ./scripts/compile_contracts.sh
+      run: bash scripts/compile_contracts.sh
 
     - name: Run tests
-      run: |
-        python -m unittest discover -s test
+      run: python -m pytest
+
+    - name: Deploy contracts
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: python migrations/deploy_contracts.py
