--- a/identifi-frontend/package.json
+++ b/identifi-frontend/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/signing-key": "^5.7.0",
     "@hookform/resolvers": "^4.1.2",
+    "a": "^3.0.1",
+    "dependency": "^0.0.1",
+    "elliptic": "^6.5.5",
     "hamburger-react": "^2.5.2",
     "next": "^15.2.3",
+    "on": "^1.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "thirdweb": "^5",
+    "requires": "^1.0.2",
+    "thirdweb": "^5.89.0",
+    "transitive": "^0.0.0pre31",
+    "via": "^0.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
